sf-dynamic-approvals/main/default/objects/DynamicApprovalEvent__e/DynamicApprovalEvent__e.object-meta.xml
<CustomObject>
    <label>Dynamic Approval Event</label>
    <pluralLabel>Dynamic Approval Events</pluralLabel>
</CustomObject>