sf-dynamic-approvals/main/default/objects/DynamicApprovalEvent__e/fields/AdditionalData__c.field-meta.xml
<CustomField>
    <fullName>AdditionalData__c</fullName>
    <label>Additional Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>