sf-dynamic-approvals/main/default/objects/DynamicApprovalEvent__e/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>