sf-dynamic-approvals/main/default/objects/DynamicApprovalEvent__e/fields/ProcessId__c.field-meta.xml
<CustomField>
    <fullName>ProcessId__c</fullName>
    <label>Process Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>