sf-dynamic-approvals/main/default/objects/DynamicApprovalEvent__e/fields/StepId__c.field-meta.xml
<CustomField>
    <fullName>StepId__c</fullName>
    <label>Step Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>